--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ header {
         width: 8px;
         display: inline-block;
         margin-right: 6px;
-        background-color: #E94F37; }
+        background-color: #00aeff; }
   .main-header .right-space, .main-header .hamburguer-icon {
     display: none; }
 
