--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@
 /*end of social icons on hover*/
 /*logo or something*/
 .saki{
-    font-family: Papyrus !important;
+    font-family: Trebuchet MS !important;
     color: white;
     font-size: 1.3em !important;
     font-weight: bold !important;
