--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
     font-family: Trebuchet MS !important;
     color: white;
     font-size: 1.3em !important;
-    font-weight: bold !important;
+/*     font-weight: bold !important; */
     display: inline-block;
     text-decoration: none !important;
 }
