--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,10 @@
   animation-direction: normal, alternate;
 }
 /*end of social icons on hover*/
+
 /*logo or something*/
 .saki{
-    font-family: Trebuchet MS !important;
+    font-family: Helvetica !important;
     color: white;
     font-size: 1.3em !important;
 /*     font-weight: bold !important; */
