--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@
 
 /*logo or something*/
 .saki{
-    font-family: Helvetica !important;
+    font-family: Times New Roman !important;
     color: white;
     font-size: 1.3em !important;
 /*     font-weight: bold !important; */
