--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,9 @@
 
 /*logo or something*/
 .saki{
-    font-family: Times New Roman !important;
+    font-family: Verdana !important;
     color: white;
-    font-size: 1.3em !important;
+    font-size: 1em !important;
 /*     font-weight: bold !important; */
     display: inline-block;
     text-decoration: none !important;
