--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,186 @@
 /*avatar*/
 .avatar{
   width: 25%;
-  border-radius: 30%;
+  border-radius: 50%;
 }
 /*end of avatar*/
+
+
+#openPopup{
+	color: #00aeff;
+}
+
+#openPopup:hover{
+	color: #0078a0;
+}
+
+/*---------------Pop up css------------*/
+.sbContainer .page-content #slot-main {
+    z-index:unset;
+}
+
+.sbContainer .slider_wrapper, .sbContainer .slider, .sbContainer .page-content .main-content, .sbContainer-innerWrapper {
+    z-index:unset;
+}
+
+#css-only-modals {
+    position: fixed;
+    pointer-events: none;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10000000;
+    text-align: center;
+    white-space: nowrap;
+    height: 100%;
+	display: none;
+}
+
+#css-only-modals:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -.25em;
+}
+
+.css-only-modal-check {
+    pointer-events: auto;
+    display: none;
+}
+
+.css-only-modal-check:checked~.css-only-modal {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.css-only-modal {
+    width: 1200px;
+    background: #fff;
+    z-index: 1;
+    display: inline-block;
+    position: relative;
+    pointer-events: auto;
+    padding: 40px;
+    border-radius: 25px;
+    white-space: normal;
+    vertical-align: middle;
+    opacity: 0;
+}
+
+.css-only-modal h2 {
+    text-align: center;
+    margin-bottom:20px;
+}
+
+.css-only-modal p {
+    text-align: left;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #999;
+    border-color: #999;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #777;
+    border-color: #777;
+    border-radius: 4px;
+    padding: 6px 12px;
+    float: right;
+}
+
+.css-only-modal-check:checked~#screen-shade {
+    opacity: .5;
+    pointer-events: auto;
+}
+
+#screen-shade {
+    opacity: 0;
+    background: #000;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    pointer-events: none;
+    transition: opacity .8s;
+}
+/*------------End pop up css------*/
+
+.css-only-modal div ul{
+	text-align: left;
+	width: 45%
+}
+
+.css-only-modal div{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.css-only-modal .close{
+	background-color: #2a2d34;
+	border: none !important;
+	color: white;
+	opacity: unset !important;
+	border-radius: 25px;
+	padding: 15px 25px;
+	transition: 0.5s ease;
+}
+
+.css-only-modal .close:hover{
+	border-radius: 0;
+	background-color: #2a2d34;
+	color: white;
+	opacity: unset !important;
+}
+
+/* Carousel container */
+.carousel {
+  position: relative;
+  width: 100%;
+  min-height: 225px;
+  margin: 0 auto;
+  background-color: #2a2d34;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel-item{
+	text-align: center;
+	
+	h2, p{
+		color: white;
+	}
+}
+
+.carousel-control-next, .carousel-control-prev{
+	width: 2% !important;
+}
+
+/*background title*/
+@media only screen and (min-width: 90.063em) {
+    #background-title.section-title {
+        padding: 0 0 25px 0 !important;
+    }
+}
+
+#background h3{
+	color: white;
+}
+
+.about-us{
+	background: #2a2d34;
+	padding: 100px 0;
+}
+/*background title end*/
+
 /*contact title*/
 .contact-title{
   padding-top: 0 !important;
@@ -16,6 +193,7 @@
   }
 
 /*end of contact title*/
+
 /*social icons on hover*/
 .icons{
   width: 50%;
