--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,37 @@
 }
 /*avatar*/
 .avatar{
-  width: 25%;
+  width: 35%;
   border-radius: 50%;
 }
 /*end of avatar*/
 
+.bannerhero{
+	display: flex;
+	flex-direction: row;
+	height: 100%;
+    align-items: center;
+}
+
+.bannerhero-inner{
+	width: 50%;
+}
+
+@media (max-width: 1024px){
+	.bannerhero{
+		flex-direction: column;
+		justify-content: space-evenly;
+	}
+	.bannerhero-inner{
+		width: 100%;
+	}
+}
+
+/* @media (max-width: 519px){ */
+	/* .avatar{ */
+		/* width: 35%; */
+	/* } */
+/* } */
 
 #openPopup{
 	color: #00aeff;
